# opensensorpanel

./: .gitignore  README.md  pyproject.toml
docs/: aida64-import-strategy.md
docs/plans/: 2026-05-27-backend-prototype.md
scripts/: install-user.sh  uninstall-user.sh
src/opensensorpanel/: __init__.py  aida64_import.py  cli.py  collectors.py  desktop_app.py  linux_sensors.py  snapshot.py  template_packages.py  templates.py  web.py
tests/: test_aida64_import.py  test_cli.py  test_collectors.py  test_desktop_app.py  test_linux_sensors.py  test_snapshot.py  test_template_packages.py  test_templates.py  test_web.py
